# vamoshostia

./: README.md  helloworld.cpp  makefile.txt  median.cpp  median_eigen.cpp  mode.cc  sum  sum.cpp  sum_ab.cpp  utils.cc
Statistics/: arith_mean  arith_mean.cpp  makefile.txt  median  mode.cc  mode_eigen.cpp
install/: local_setup.sh  setup.sh
install/examples_sum/share/examples_sum/: local_setup.sh  package.sh
install/examples_topics/share/examples_topics/: local_setup.sh  package.sh
install/robot_trajectory/share/robot_trajectory/: local_setup.sh  package.sh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_ws/learning_tf2_cpp/: CMakeLists.txt  package.xml
ros2_ws/learning_tf2_cpp/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
ros2_ws/log/: latest_build
ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt
ros2_ws/src/action_tutorials_cpp/src/: action_client.cpp  action_server.cpp
ros2_ws/src/action_tutorials_interfaces/: CMakeLists.txt
ros2_ws/src/action_tutorials_interfaces/install/: local_setup.sh  setup.sh
ros2_ws/src/action_tutorials_interfaces/log/: latest_build
ros2_ws/src/cpp_srvcli/: CMakeLists.txt
ros2_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/sum/: sum.cpp
tb3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tb3_ws/log/: latest_build
tb3_ws/src/tb3_ws/src/olympic/: CMakeLists.txt  package.xml
tb3_ws/src/tb3_ws/src/olympic/src/: rings.cpp  rings_action_client.cpp  rings_action_server.cpp
(+88 files in other folders)
