<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olympic</name>
  <version>0.0.0</version>
  <description>C++ client server tutorial</description>
  <maintainer email="al415491@uji.es">pau24113</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>olympic_interfaces</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_components</build_depend>

  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>olympic_interfaces</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
